<resources>
    <string name="app_name">Luna</string>
    <string name="feed">Feed</string>
    <string name="map">Map</string>
    <string name="account">Account</string>
    <string name="error_has_occured">Произошла ошибка</string>
    <string name="repeat">Повторить</string>
    <string name="error_has_occured_while_data_loading">Произошла ошибка при загрузке данных</string>
    <string name="added_to_favorites">Добавлено в избранное</string>
    <string name="removed_from_favorites">Убрано из избранного</string>
    <string name="total_price_x_rubles">Итоговая стоимость: %1$d₽</string>
    <string name="types_of_manicure">Виды маникюра</string>
    <string name="with_cover">С покрытием</string>
    <string name="without_cover">Без покрытия</string>
    <string name="login">Логин</string>
    <string name="password">Пароль</string>
    <string name="log_in">Войти</string>
    <string name="i_am_user">Я - пользователь</string>
    <string name="i_am_master">Я - мастер</string>
    <string name="sign_up">Зарегистрироваться</string>
    <string name="repeat_password">Повторите пароль</string>
    <string name="your_name">Ваше имя</string>
    <string name="email">E-mail</string>
    <string name="wrong_format">Неверный формат</string>
    <string name="passwords_dont_match">Пароли не совпадают</string>
    <string name="sign_up_successful">Регистрация успешна!</string>
    <string name="sign_up_failed">Произошла ошибка</string>
    <string name="salon_visiting">ПОСЕЩЕНИЕ</string>
    <string name="about_master">о мастере</string>
    <string name="about_salon">о салоне</string>
    <string name="make_an_appointment">Записаться</string>
    <string name="search_for_masters_and_saloons">Поиск мастеров и салонов</string>
    <string name="services">Услуги</string>
    <string name="price_depends_on_master_qualification">Стоимость зависит от квалификации мастера (мастер-стилист, ведущий стилист, арт-директор)</string>
    <string name="metro_with_address_template">%1$s. %2$s</string>
    <string name="master_photos_counter_template">%1$d/%2$d</string>
</resources>
